[package]
name = "weavetree-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "weavetree"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
rand = "0.8"
rand_chacha = "0.3"
serde_yaml = "0.9"
weavetree-core = { path = "../weavetree-core" }
weavetree-mdp = { path = "../weavetree-mdp" }
